--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -152,7 +152,7 @@ scripts:
     section: Run Performance
     output_file: simulation_time_number_of_steps.png
   - filename: scripts/density_temperature_species.py
-    caption: Density-temperature diagram shaded by H$_2$ mass fraction.
+    caption: Density-temperature diagram shaded by H$_2$ mass fraction. The fraction is computed as the H$_2$ mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_H2.png
     section: Hydrogen Phase Density-Temperature
     title: H$_2$
@@ -160,7 +160,7 @@ scripts:
       hydrogen_species: H2
       quantity_type: subgrid
   - filename: scripts/density_temperature_species.py
-    caption: Density-temperature diagram shaded by HI mass fraction.
+    caption: Density-temperature diagram shaded by HI mass fraction. The fraction is computed as the HI mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_HI.png
     section: Hydrogen Phase Density-Temperature
     title: HI
@@ -168,7 +168,7 @@ scripts:
       hydrogen_species: HI
       quantity_type: subgrid
   - filename: scripts/density_temperature_species.py
-    caption: Density-temperature diagram shaded by HII mass fraction.
+    caption: Density-temperature diagram shaded by HII mass fraction. The fraction is computed as the HII mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_HII.png
     section: Hydrogen Phase Density-Temperature
     title: HII
