add oxygen to required VR properties in example file

--- a/colibre/vrconfig_example.cfg
+++ b/colibre/vrconfig_example.cfg
@@ -182,9 +182,9 @@ Spherical_overdensity_halo_particle_list_output=1
 #ALTER THIS as part of a script to get temporally unique ids
 Snapshot_value=SNAP
 
-Gas_internal_property_names=SpeciesFractions,SpeciesFractions,SpeciesFractions,ElementMassFractions,
-Gas_internal_property_index_in_file=1,2,7,0,
-Gas_internal_property_calculation_type =averagemassweighted,averagemassweighted,averagemassweighted,averagemassweighted,
+Gas_internal_property_names=SpeciesFractions,SpeciesFractions,SpeciesFractions,ElementMassFractions,ElementMassFractions,
+Gas_internal_property_index_in_file=1,2,7,0,4,
+Gas_internal_property_calculation_type =averagemassweighted,averagemassweighted,averagemassweighted,averagemassweighted,averagemassweighted,
 
 
 ################################
