Extend the range of the BH relations to include the seed mass

--- a/eagle-xl/auto_plotter/black_holes.yml
+++ b/eagle-xl/auto_plotter/black_holes.yml
@@ -9,7 +9,7 @@ stellar_mass_black_hole_mass_30:
   y:
     quantity: "black_hole_masses.max"
     units: Solar_Mass
-    start: 1e5
+    start: 6e3
     end: 1e11
   median:
     plot: true
@@ -29,9 +29,14 @@ stellar_mass_black_hole_mass_30:
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassBlackHoleMass/Sahu2019_ETG.hdf5
+      minimum_redshift: 0.0
+      maximum_redshift: 0.5
     - filename: GalaxyStellarMassBlackHoleMass/Sahu2019_LTG.hdf5
+      minimum_redshift: 0.0
+      maximum_redshift: 0.5
     - filename: GalaxyStellarMassBlackHoleMass/McConnell2013_Fit.hdf5
-
+      minimum_redshift: 0.0
+      maximum_redshift: 2.0
 
 stellar_mass_black_hole_mass_100:
   type: "scatter"
@@ -44,7 +49,7 @@ stellar_mass_black_hole_mass_100:
   y:
     quantity: "black_hole_masses.max"
     units: Solar_Mass
-    start: 1e5
+    start: 6e3
     end: 1e11
   median:
     plot: true
@@ -63,8 +68,14 @@ stellar_mass_black_hole_mass_100:
     section: Black Holes
   observational_data:
     - filename: GalaxyStellarMassBlackHoleMass/Sahu2019_ETG.hdf5
+      minimum_redshift: 0.0
+      maximum_redshift: 0.5
     - filename: GalaxyStellarMassBlackHoleMass/Sahu2019_LTG.hdf5
+      minimum_redshift: 0.0
+      maximum_redshift: 0.5
     - filename: GalaxyStellarMassBlackHoleMass/McConnell2013_Fit.hdf5
+      minimum_redshift: 0.0
+      maximum_redshift: 2.0
 
 
 halo_mass_black_hole_mass:
@@ -78,7 +89,7 @@ halo_mass_black_hole_mass:
   y:
     quantity: "black_hole_masses.max"
     units: Solar_Mass
-    start: 1e5
+    start: 6e3
     end: 1e11
   median:
     plot: true
@@ -108,7 +119,7 @@ stellar_veldisp_black_hole_mass_10:
   y:
     quantity: "black_hole_masses.max"
     units: Solar_Mass
-    start: 1e5
+    start: 6e3
     end: 1e11
   median:
     plot: true
@@ -140,7 +151,7 @@ stellar_veldisp_black_hole_mass_30:
   y:
     quantity: "black_hole_masses.max"
     units: Solar_Mass
-    start: 1e5
+    start: 6e3
     end: 1e11
   median:
     plot: true
