--- a/colibre/auto_plotter/galaxy_sizes.yml
+++ b/colibre/auto_plotter/galaxy_sizes.yml
@@ -165,6 +165,7 @@ stellar_mass_projected_galaxy_size_active_only_100:
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
+    - filename: GalaxyStellarMassGalaxySize/Mosleh2020_SF.hdf5
 
 stellar_mass_projected_galaxy_size_active_only_30:
   type: "scatter"
@@ -202,6 +203,7 @@ stellar_mass_projected_galaxy_size_active_only_30:
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
+    - filename: GalaxyStellarMassGalaxySize/Mosleh2020_SF.hdf5
 
 stellar_mass_projected_galaxy_size_passive_only_100:
   type: "scatter"
@@ -238,6 +240,7 @@ stellar_mass_projected_galaxy_size_passive_only_100:
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
+    - filename: GalaxyStellarMassGalaxySize/Mosleh2020_Q.hdf5
 
 stellar_mass_projected_galaxy_size_passive_only_30:
   type: "scatter"
@@ -275,4 +278,5 @@ stellar_mass_projected_galaxy_size_passive_only_30:
     - filename: GalaxyStellarMassGalaxySize/Lange2015HBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/Lange2015rBand.hdf5
     - filename: GalaxyStellarMassGalaxySize/xGASS.hdf5
+    - filename: GalaxyStellarMassGalaxySize/Mosleh2020_Q.hdf5
 
