--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -156,6 +156,11 @@ scripts:
     title: Number of steps vs. cosmic time
     section: Run Performance
     output_file: simulation_time_number_of_steps.png
+  - filename: scripts/wallclock_timebin_hist.py
+    caption: Total wall-clock time spent in each of the different simulation time-bins.
+    title: Wall-clock time per time-bin
+    section: Run Performance
+    output_file: wallclock_timebin_hist.png
   - filename: scripts/density_temperature_species.py
     caption: Density-temperature diagram shaded by H$_2$ mass fraction. The fraction is computed as the H$_2$ mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_H2.png
