--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -61,6 +61,16 @@ scripts:
     output_file: stellar_mass_evolution.png
     section: Star Formation History
     title: Stellar Mass Density Evolution
+  - filename: scripts/HI_mass_evolution.py
+    caption: Evolution of the atomic gas mass plotted directly from the statistics.txt file produced by SWIFT.
+    output_file: HI_mass_evolution.png
+    section: Cold Gas Evolution
+    title: Atomic Gas Mass Evolution
+  - filename: scripts/H2_mass_evolution.py
+    caption: Evolution of the molecular gas mass plotted directly from the statistics.txt file produced by SWIFT.
+    output_file: H2_mass_evolution.png
+    section: Cold Gas Evolution
+    title: Molecular Gas Mass Evolution
   - filename: scripts/metallicity_distribution.py
     caption: Metal mass fraction distribution shown for each simulation; solid lines show gas metallicity and dashed lines show the same for the stars. If present, dashed line represents the entropy floor (equation of state).
     output_file: metallicity_distribution.png
