--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -57,12 +57,12 @@ scripts:
     section: Star Formation History
     title: Stellar Mass Evolution
   - filename: scripts/HI_mass_evolution.py
-    caption: Evolution of the atomic gas mass plotted directly from the statistics.txt file produced by SWIFT.
+    caption: Evolution of the atomic gas mass abundance plotted directly from the statistics.txt file produced by SWIFT. The horizontal dashed line corresponds to $\Omega_b$.
     output_file: HI_mass_evolution.png
     section: Cold Gas Evolution
     title: Atomic Gas Mass Evolution
   - filename: scripts/H2_mass_evolution.py
-    caption: Evolution of the molecular gas mass plotted directly from the statistics.txt file produced by SWIFT.
+    caption: Evolution of the molecular gas mass abundance plotted directly from the statistics.txt file produced by SWIFT. The horizontal dashed line corresponds to $\Omega_b$.
     output_file: H2_mass_evolution.png
     section: Cold Gas Evolution
     title: Molecular Gas Mass Evolution
