--- a/colibre/auto_plotter/cold_gas_fractions.yml
+++ b/colibre/auto_plotter/cold_gas_fractions.yml
@@ -16,9 +16,9 @@ cold_gas_frac_func_stellar_mass:
     plot: true
     adaptive: true
     log: true
-    number_of_bins: 15
+    number_of_bins: 25
     start:
-      value: 2e7
+      value: 1e7
       units: Solar_Mass
     end:
       value: 1e12
@@ -26,7 +26,7 @@ cold_gas_frac_func_stellar_mass:
   metadata:
     title: Stellar Mass-Cold gas Fraction
     section: Cold Gas Data Comparison
-    caption: Galaxy H_$2$ mass (including Helium following the observations) over stellar mass as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ mass (including Helium following the observations) over stellar mass as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyColdGasFractions/Catinella2018_abcissa_M_star.hdf5
     
@@ -48,17 +48,17 @@ cold_gas_frac_func_ssfr:
     plot: true
     adaptive: true
     log: true
-    number_of_bins: 40
+    number_of_bins: 30
     start:
       value: 1e-4
       units: "1 / Gigayear"
     end:
-      value: 6e1
+      value: 1e2
       units: "1 / Gigayear"
   metadata:
     title: sSFR-Cold gas Fraction
     section: Cold Gas Data Comparison
-    caption: Galaxy H_$2$ mass (including Helium following the observations) over stellar mass as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ mass (including Helium following the observations) over stellar mass as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyColdGasFractions/Catinella2018_abcissa_sSFR.hdf5
 
@@ -80,9 +80,9 @@ h2_to_neutral_gas_frac_func_stellar_mass:
     plot: true
     adaptive: true
     log: true
-    number_of_bins: 15
+    number_of_bins: 30
     start:
-      value: 2e7
+      value: 1e7
       units: Solar_Mass
     end:
       value: 1e12
@@ -90,7 +90,7 @@ h2_to_neutral_gas_frac_func_stellar_mass:
   metadata:
     title: Stellar Mass-Cold gas Fraction
     section: Cold Gas Data Comparison
-    caption: Galaxy H_$2$ mass (including Helium following the observations) over stellar mass as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ mass (including Helium following the observations) over neutral gas (HI+H$_2$) mass as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyColdGasFractions/CatinellaSaintongeComposite_abcissa_M_star.hdf5
     
@@ -112,17 +112,17 @@ h2_to_neutral_gas_frac_func_ssfr:
     plot: true
     adaptive: true
     log: true
-    number_of_bins: 40
+    number_of_bins: 30
     start:
       value: 1e-4
       units: "1 / Gigayear"
     end:
-      value: 6e1
+      value: 1e2
       units: "1 / Gigayear"
   metadata:
     title: sSFR-H2 Fraction
     section: Cold Gas Data Comparison
-    caption: Galaxy H_$2$ mass (including Helium following the observations) over neutral gas mass (HI+H$_2$) as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ mass (including Helium following the observations) over neutral gas mass (HI+H$_2$) as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyColdGasFractions/CatinellaSaintongeComposite_abcissa_sSFR.hdf5
 
