--- a/colibre/auto_plotter/stellar_mass_halo_mass.yml
+++ b/colibre/auto_plotter/stellar_mass_halo_mass.yml
@@ -120,7 +120,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
   median:
     plot: true
     log: true
-    adapive: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 9e3
